--- a/popup.html
+++ b/popup.html
@@ -3,9 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Translator Settings</title>
-  <script src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
-  <script src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
-  <script src="https://cdn.tailwindcss.com"></script>
+  <link href="dist/styles.css" rel="stylesheet">
   <style>
     body {
       width: 320px;
